basic property card

--- a/Frontend/src/app/core/property/property-card/property-card.component.html
+++ b/Frontend/src/app/core/property/property-card/property-card.component.html
@@ -1,1 +1,19 @@
-<p>property-card works!</p>
+<div class="row">
+  <div class="card shadow-lg col-sm-3">
+    <img class='propImage' src="assets/images/house-default.png" alt="">
+    <div class="card-body p-2">
+      <h1>{{ property.name }}</h1>
+      <h2>{{ property.type }}</h2>
+      <h3>{{ property.price }}</h3>
+    </div>
+  </div>
+</div>
+
+<!--<div class="card" style="width: 18rem;">-->
+<!--  <img src="..." class="card-img-top" alt="...">-->
+<!--  <div class="card-body">-->
+<!--    <h5 class="card-title">Card title</h5>-->
+<!--    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+<!--    <a href="#" class="btn btn-primary">Go somewhere</a>-->
+<!--  </div>-->
+<!--</div>-->
