property list and property card mocks

--- a/Frontend/src/app/core/property/property-card/property-card.component.html
+++ b/Frontend/src/app/core/property/property-card/property-card.component.html
@@ -1,13 +1,12 @@
-<div class="row">
-  <div class="card shadow-lg col-sm-3">
-    <img class='propImage' src="assets/images/house-default.png" alt="">
-    <div class="card-body p-2">
-      <h1>{{ property.name }}</h1>
-      <h2>{{ property.type }}</h2>
-      <h3>{{ property.price }}</h3>
-    </div>
+<div class="card shadow-lg">
+  <img src="assets/images/house-default.png" alt="">
+  <div class="card-body p-2">
+    <h1>{{ property.name }}</h1>
+    <h2>{{ property.type }}</h2>
+    <h3>{{ property.price }}</h3>
   </div>
 </div>
+
 
 <!--<div class="card" style="width: 18rem;">-->
 <!--  <img src="..." class="card-img-top" alt="...">-->
