--- a/Frontend/src/app/core/property/property-list/property-list.component.html
+++ b/Frontend/src/app/core/property/property-list/property-list.component.html
@@ -1,1 +1,5 @@
-<p>property-list works!</p>
+<div class="row gy-3 my-3">
+  <div class="col-md-3" *ngFor="let property of properties">
+    <property-card [property]="property"></property-card>
+  </div>
+</div>
