--- a/Frontend/src/app/core/property/property-card/property-card.component.html
+++ b/Frontend/src/app/core/property/property-card/property-card.component.html
@@ -1,6 +1,16 @@
-<div class="card shadow-lg">
-  <img src="assets/images/house-default.png" alt="">
-  <div class="card-body p-2">
+<div class="card shadow-lg p-1">
+  <div class="card-img-wrapper">
+    <img class="card-img-top" src="assets/images/house-default.png" alt="">
+    <ul class="list-inline text-center member-icons animate">
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa-solid fa-address-book"></i></button>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
     <h1>{{ property.name }}</h1>
     <h2>{{ property.type }}</h2>
     <h3>{{ property.price }}</h3>
