--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,9 +1,14 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <mat-nav-list>
-      <a mat-list-item>
-        <mat-icon class="icon">input</mat-icon>
-        <span class="label">Login</span>
+      <a mat-list-item routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <span class="label">Buy</span>
+      </a>
+<!--      <a mat-list-item routerLink="rent-property" routerLinkActive="active">-->
+<!--        <span class="label">Rent</span>-->
+<!--      </a>-->
+      <a mat-list-item routerLink="add-property" routerLinkActive="active">
+        <span class="label">Add</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
@@ -15,16 +20,25 @@
         </button>
       </div>
       <div>
-        <a>
+        <a routerLink="">
           Housing
         </a>
       </div>
       <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul fxLayout fxLayoutGap="20px" class="navigation-items">
           <li>
-            <a>
-              <mat-icon class="icon">input</mat-icon>
-              <span class="label">Login</span>
+            <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <span class="label">Buy</span>
+            </a>
+          </li>
+<!--          <li>-->
+<!--            <a routerLink="/rent-property" routerLinkActive="active">-->
+<!--              <span class="label">Rent</span>-->
+<!--            </a>-->
+<!--          </li>-->
+          <li>
+            <a routerLink="/add-property" routerLinkActive="active">
+              <span class="label">Add</span>
             </a>
           </li>
         </ul>
@@ -32,7 +46,7 @@
     </mat-toolbar>
     <main>
       <div class="container">
-        <property-list></property-list>
+        <router-outlet></router-outlet>
       </div>
     </main>
   </mat-sidenav-content>
