--- a/Frontend/src/app/core/property/property-card/property-card.component.html
+++ b/Frontend/src/app/core/property/property-card/property-card.component.html
@@ -3,10 +3,14 @@
     <img class="card-img-top" src="assets/images/house-default.png" alt="">
     <ul class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></button>
+        <button class="btn btn-primary"         routerLink="property-detail/{{property.id}}">
+          <i class="fa-solid fa-pen-to-square"></i>
+        </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa-solid fa-address-book"></i></button>
+        <button class="btn btn-primary">
+          <i class="fa-solid fa-address-book"></i>
+        </button>
       </li>
     </ul>
   </div>
