--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -32,7 +32,7 @@
     </mat-toolbar>
     <main>
       <div class="container">
-        <property-list></property-list>
+        <router-outlet></router-outlet>
       </div>
     </main>
   </mat-sidenav-content>
