add property form and some routing issues

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,9 +4,9 @@
       <a mat-list-item routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         <span class="label">Buy</span>
       </a>
-<!--      <a mat-list-item routerLink="rent-property" routerLinkActive="active">-->
-<!--        <span class="label">Rent</span>-->
-<!--      </a>-->
+      <a mat-list-item routerLink="rent-property" routerLinkActive="active">
+        <span class="label">Rent</span>
+      </a>
       <a mat-list-item routerLink="add-property" routerLinkActive="active">
         <span class="label">Add</span>
       </a>
@@ -31,11 +31,11 @@
               <span class="label">Buy</span>
             </a>
           </li>
-<!--          <li>-->
-<!--            <a routerLink="/rent-property" routerLinkActive="active">-->
-<!--              <span class="label">Rent</span>-->
-<!--            </a>-->
-<!--          </li>-->
+          <li>
+            <a routerLink="/rent-property" routerLinkActive="active">
+              <span class="label">Rent</span>
+            </a>
+          </li>
           <li>
             <a routerLink="/add-property" routerLinkActive="active">
               <span class="label">Add</span>
