--- a/Frontend/src/app/core/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/core/property/property-detail/property-detail.component.html
@@ -1,1 +1,11 @@
-<p>{{propertyId}}</p>
+<p>
+  {{propertyId}}
+  <br/>
+  <br/>
+  <button (click)="onSelectNext()" class="btn btn-primary">Select Next Page</button>
+
+  <br/>
+  <br/>
+  <button routerLink="/property-detail/1" class="btn btn-primary">1</button>
+  <button routerLink="/property-detail/2" class="btn btn-primary">2</button>
+</p>
