--- a/Frontend/src/app/core/property/add-property/add-property.component.html
+++ b/Frontend/src/app/core/property/add-property/add-property.component.html
@@ -4,24 +4,24 @@
   </div>
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #Form="ngForm">
-      <div class="form-group col-12">
+      <div class="form-group col-12 mt-2">
         <label for="name">Name</label>
         <input type="text" #propName='ngModel' class="form-control" ngModel name="name" required minlength="5">
         <span *ngIf="!propName.valid && propName.touched" class="error-block">
-          <span *ngIf="propName.errors?.['required']">Please provide name</span>
+          <span *ngIf="propName.errors?.['required']">Please provide the name</span>
           <span *ngIf="propName.errors?.['minlength']">Name must be at least 5 character long</span>
         </span>
       </div>
-      <div class="form-group col-12">
+      <div class="form-group col-12 mt-2">
         <label for="type">Type</label>
         <input type="text" class="form-control" ngModel name="type">
       </div>
-      <div class="form-group col-12">
+      <div class="form-group col-12 mt-2">
         <label for="price">Price</label>
         <input type="text" class="form-control" ngModel name="price">
       </div>
-      <div class="form-group">
-        <button  [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-sm-2">Save</button>
+      <div class="form-group mt-2">
+        <button  [disabled]="!Form.valid" type="submit" class="btn btn-primary me-2">Save</button>
         <button type="cancel" class="btn btn-primary">Cancel</button>
       </div>
     </form>
