some existing forms improvements

--- a/Frontend/src/app/core/user/signup/signup.component.html
+++ b/Frontend/src/app/core/user/signup/signup.component.html
@@ -1,1 +1,71 @@
-<p>signup works!</p>
+<div class="row">
+  <div class="col-9 m-auto">
+    <div class="card m-auto">
+      <div class="card-header">
+        Sign Up
+      </div>
+      <div class="card-body">
+        <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" >
+          <div class="form-group col-12 mt-2">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" formControlName="userName">
+            <span *ngIf="!userName?.valid && userName?.touched" class="error-block">
+              Please provide the name
+            </span>
+          </div>
+
+          <div class="form-group col-12 mt-2">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" formControlName="email">
+            <span *ngIf="!email?.valid && email?.touched" class="error-block">
+              <span *ngIf="email?.hasError('required')">
+                Please provide the email id
+              </span>
+              <span *ngIf="email?.hasError('email')">
+                Please provide the valid email id
+              </span>
+            </span>
+          </div>
+
+          <div class="form-group col-12 mt-2">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" formControlName="password">
+            <span *ngIf="!password?.valid && password?.touched" class="error-block">
+              <span *ngIf="password?.hasError('required')">
+                Please provide the password
+              </span>
+              <span *ngIf="password?.hasError('minlength')">
+                Password should not be less than 8 characters
+              </span>
+            </span>
+          </div>
+
+          <div class="form-group col-12 mt-2">
+            <label for="cpassword">Confirm Password</label>
+            <input type="password" class="form-control" formControlName="confirmPassword">
+            <span *ngIf="!confirmPassword?.valid && confirmPassword?.touched" class="error-block">
+              <span *ngIf="confirmPassword?.hasError('required')">
+                Please confirm the password
+              </span>
+            </span>
+            <span *ngIf="registrationForm.hasError('notMatched') && confirmPassword?.valid" class="error-block">
+                Passwords not matched
+            </span>
+          </div>
+
+          <div class="form-group col-12 mt-2">
+            <label for="mobile">Mobile</label>
+            <input type="text" class="form-control" formControlName="mobile">
+          </div>
+
+          <div class="form-group col-12 mt-2">
+            <button type="submit" class="btn btn-primary me-2">Save</button>
+            <button type="reset" class="btn btn-secondary">Cancel</button>
+          </div>
+          Form Values: {{ registrationForm.value | json}} <br>
+          Form Status: {{ registrationForm.valid }}
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
