--- a/Frontend/src/app/core/user/signup/signup.component.html
+++ b/Frontend/src/app/core/user/signup/signup.component.html
@@ -54,16 +54,14 @@
           </div>
 
           <div class="form-group col-12 mt-2">
-            <label for="mobile">Mobile</label>
-            <input type="text" class="form-control" formControlName="mobile">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" formControlName="phone">
           </div>
 
           <div class="form-group col-12 mt-2">
-            <button type="submit" class="btn btn-primary me-2">Save</button>
+            <button type="submit" [disabled]="!registrationForm.valid" class="btn btn-primary me-2">Save</button>
             <button type="reset" class="btn btn-secondary">Cancel</button>
           </div>
-          Form Values: {{ registrationForm.value | json}} <br>
-          Form Status: {{ registrationForm.valid }}
         </form>
       </div>
     </div>
