--- a/Frontend/src/app/core/user/signup/signup.component.html
+++ b/Frontend/src/app/core/user/signup/signup.component.html
@@ -9,7 +9,7 @@
           <div class="form-group col-12 mt-2">
             <label for="name">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName?.valid && userName?.touched" class="error-block">
+            <span *ngIf="!userName?.valid && (userName?.touched || userSubmitted)" class="error-block">
               Please provide the name
             </span>
           </div>
@@ -17,7 +17,7 @@
           <div class="form-group col-12 mt-2">
             <label for="email">Email</label>
             <input type="text" class="form-control" formControlName="email">
-            <span *ngIf="!email?.valid && email?.touched" class="error-block">
+            <span *ngIf="!email?.valid && (email?.touched || userSubmitted)" class="error-block">
               <span *ngIf="email?.hasError('required')">
                 Please provide the email id
               </span>
@@ -30,7 +30,7 @@
           <div class="form-group col-12 mt-2">
             <label for="password">Password</label>
             <input type="password" class="form-control" formControlName="password">
-            <span *ngIf="!password?.valid && password?.touched" class="error-block">
+            <span *ngIf="!password?.valid && (password?.touched || userSubmitted)" class="error-block">
               <span *ngIf="password?.hasError('required')">
                 Please provide the password
               </span>
@@ -43,12 +43,12 @@
           <div class="form-group col-12 mt-2">
             <label for="cpassword">Confirm Password</label>
             <input type="password" class="form-control" formControlName="confirmPassword">
-            <span *ngIf="!confirmPassword?.valid && confirmPassword?.touched" class="error-block">
+            <span *ngIf="!confirmPassword?.valid && (confirmPassword?.touched || userSubmitted)" class="error-block">
               <span *ngIf="confirmPassword?.hasError('required')">
                 Please confirm the password
               </span>
             </span>
-            <span *ngIf="registrationForm.hasError('notMatched') && confirmPassword?.valid" class="error-block">
+            <span *ngIf="registrationForm.hasError('notMatched') && (confirmPassword?.valid || userSubmitted)" class="error-block">
                 Passwords not matched
             </span>
           </div>
@@ -56,10 +56,18 @@
           <div class="form-group col-12 mt-2">
             <label for="phone">Phone</label>
             <input type="text" class="form-control" formControlName="phone">
+            <span *ngIf="!phone?.valid && (phone?.touched || userSubmitted)" class="error-block">
+              <span *ngIf="phone?.hasError('required')">
+                Please provide the phone number
+              </span>
+              <span *ngIf="phone?.hasError('maxlength')">
+                Phone number should not be greater than 10 characters
+              </span>
+            </span>
           </div>
 
           <div class="form-group col-12 mt-2">
-            <button type="submit" [disabled]="!registrationForm.valid" class="btn btn-primary me-2">Save</button>
+            <button type="submit" class="btn btn-primary me-2">Save</button>
             <button type="reset" class="btn btn-secondary">Cancel</button>
           </div>
         </form>
