--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,4 +1,6 @@
 @import "assets/forms.css";
+@import "../node_modules/alertifyjs/build/css/alertify.min.css";
+@import "../node_modules/alertifyjs/build/css/themes/bootstrap.min.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
