--- a/Frontend/src/app/core/property/add-property/add-property.component.html
+++ b/Frontend/src/app/core/property/add-property/add-property.component.html
@@ -20,7 +20,7 @@
         <label for="price">Price</label>
         <input type="text" class="form-control" ngModel name="price">
       </div>
-      <div class="form-group mt-2">
+      <div class="form-group mt-2 d-flex justify-content-center">
         <button  [disabled]="!Form.valid" type="submit" class="btn btn-primary me-2">Save</button>
         <button type="cancel" class="btn btn-primary">Cancel</button>
       </div>
