--- a/Frontend/src/app/core/user/signup/signup.component.html
+++ b/Frontend/src/app/core/user/signup/signup.component.html
@@ -7,9 +7,9 @@
       <div class="card-body">
         <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" >
           <div class="form-group col-12 mt-2">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName?.valid && (userName?.touched || userSubmitted)" class="error-block">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" formControlName="username">
+            <span *ngIf="!username?.valid && (username?.touched || userSubmitted)" class="error-block">
               Please provide the name
             </span>
           </div>
@@ -66,7 +66,7 @@
             </span>
           </div>
 
-          <div class="form-group col-12 mt-2">
+          <div class="form-group col-12 mt-2 d-flex justify-content-center">
             <button type="submit" class="btn btn-primary me-2">Save</button>
             <button type="reset" class="btn btn-secondary">Cancel</button>
           </div>
