login component basic view

--- a/Frontend/src/app/core/user/login/login.component.html
+++ b/Frontend/src/app/core/user/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col-9 m-auto">
+    <div class="card m-auto">
+      <div class="card-header">
+        Login
+      </div>
+      <div class="card-body">
+        <form>
+          <div class="form-group col-12 mt-2">
+            <label for="name">Username</label>
+            <input type="text" class="form-control">
+          </div>
+          <div class="form-group col-12 mt-2">
+            <label for="password">Password</label>
+            <input type="password" class="form-control">
+          </div>
+          <div class="form-group col-12 mt-2 d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary me-2">Save</button>
+            <button type="reset" class="btn btn-secondary">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
