--- a/Frontend/src/app/core/user/signup/signup.component.html
+++ b/Frontend/src/app/core/user/signup/signup.component.html
@@ -68,7 +68,7 @@
 
           <div class="form-group col-12 mt-2 d-flex justify-content-center">
             <button type="submit" class="btn btn-primary me-2">Save</button>
-            <button type="reset" class="btn btn-secondary">Cancel</button>
+            <button type="reset" class="btn btn-secondary">Clear</button>
           </div>
         </form>
       </div>
