--- a/Frontend/src/app/core/property/add-property/add-property.component.html
+++ b/Frontend/src/app/core/property/add-property/add-property.component.html
@@ -22,7 +22,7 @@
       </div>
       <div class="form-group mt-2 d-flex justify-content-center">
         <button  [disabled]="!Form.valid" type="submit" class="btn btn-primary me-2">Save</button>
-        <button type="cancel" class="btn btn-primary">Cancel</button>
+        <button type="cancel" class="btn btn-secondary">Clear</button>
       </div>
     </form>
   </div>
