--- a/Frontend/src/app/core/user/login/login.component.html
+++ b/Frontend/src/app/core/user/login/login.component.html
@@ -5,18 +5,18 @@
         Login
       </div>
       <div class="card-body">
-        <form>
+        <form #loginForm='ngForm' (ngSubmit)="onSubmit(loginForm)">
           <div class="form-group col-12 mt-2">
-            <label for="name">Username</label>
-            <input type="text" class="form-control">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" required ngModel name="username">
           </div>
           <div class="form-group col-12 mt-2">
             <label for="password">Password</label>
-            <input type="password" class="form-control">
+            <input type="password" class="form-control" required ngModel name="password">
           </div>
           <div class="form-group col-12 mt-2 d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary me-2">Save</button>
-            <button type="reset" class="btn btn-secondary">Cancel</button>
+            <button [disabled]="!loginForm.valid" type="submit" class="btn btn-primary me-2">Save</button>
+            <button type="reset" class="btn btn-secondary">Clear</button>
           </div>
         </form>
       </div>
