--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
       <a mat-list-item routerLink="rent-property" routerLinkActive="active">
         <span class="label">Rent</span>
       </a>
-      <a mat-list-item routerLink="add-property" routerLinkActive="active">
+      <a *ngIf="isLoggedIn()" mat-list-item routerLink="add-property" routerLinkActive="active">
         <span class="label">Add</span>
       </a>
       <a *ngIf="!isLoggedIn()" mat-list-item routerLink="login" routerLinkActive="active">
@@ -33,7 +33,7 @@
           <mat-icon routerLink="">home</mat-icon>
         </a>
       </div>
-      <div fxFlex fxLayout fxLayoutAlign="flex-start" fxHide.xs [style.margin-left.px]="30">
+      <div fxFlex fxLayout fxLayoutAlign="flex-start" fxHide.xs [style.margin-left.px]="20">
         <ul fxLayout fxLayoutGap="20px" class="navigation-items">
           <li>
             <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -45,7 +45,7 @@
               <span class="label">Rent</span>
             </a>
           </li>
-          <li>
+          <li *ngIf="isLoggedIn()">
             <a routerLink="/add-property" routerLinkActive="active">
               <span class="label">Add</span>
             </a>
@@ -70,6 +70,25 @@
             </a>
           </li>
         </ul>
+      </div>
+      <div *ngIf="isLoggedIn()">
+        <a mat-icon-button [mat-menu-trigger-for]="menu">
+          <mat-icon>account_box</mat-icon>
+        </a>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>
+            <mat-icon>dialpad</mat-icon>
+            <span>Redial</span>
+          </button>
+          <button mat-menu-item disabled>
+            <mat-icon>voicemail</mat-icon>
+            <span>Check voice mail</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>Disable alerts</span>
+          </button>
+        </mat-menu>
       </div>
     </mat-toolbar>
     <main>
